<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:text="@string/resetPassword"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDescriptionLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:text="@string/resetPasswordDescriptionLabel" />

    <EditText
        android:id="@+id/etUsernamePassReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:drawableLeft="@drawable/ic_action_username_outline"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_action_username_outline"
        android:ems="10"
        android:hint="@string/Username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etEmailPassReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:drawableLeft="@drawable/ic_action_email_outline"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_action_email_outline"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnSendPassReset"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:onClick="onSendEmail"
        android:text="@string/reset" />

</LinearLayout>