<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainMenuLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity">

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onLogout"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnChangePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onChangePassword"
        android:text="@string/changePassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogout" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@android:string/unknownName"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnChangePass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/addContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/addContact"
        android:onClick="onAddContact"
        app:layout_constraintBottom_toTopOf="@+id/addCompany"
        app:layout_constraintEnd_toStartOf="@+id/viewContacts"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_action_contact_add_outline" />

    <ImageButton
        android:id="@+id/viewContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/viewContacts"
        android:onClick="onViewContacts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addContact"
        app:layout_constraintTop_toTopOf="@+id/addContact"
        app:srcCompat="@drawable/ic_action_company_twotone" />

    <ImageButton
        android:id="@+id/addCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/addCompany"
        android:onClick="onAddCompany"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/addContact"
        app:layout_constraintTop_toBottomOf="@+id/addContact"
        app:srcCompat="@drawable/ic_action_company_twotone" />

    <ImageButton
        android:id="@+id/viewCompanies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/viewCompanies"
        android:onClick="onViewCompanies"
        app:layout_constraintEnd_toEndOf="@+id/viewContacts"
        app:layout_constraintTop_toTopOf="@+id/addCompany"
        app:srcCompat="@drawable/ic_action_company_twotone" />

</android.support.constraint.ConstraintLayout>