<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/changePasswordLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity">

    <TextView
        android:id="@+id/tvChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/changePassword"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etPasswordOld"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPasswordOld"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp"
        android:layout_marginStart="65dp"
        android:drawableLeft="@drawable/ic_action_password_old"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_action_password_old"
        android:ems="10"
        android:hint="@string/oldPassword"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/etPasswordNew"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etPasswordNew"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp"
        android:layout_marginStart="65dp"
        android:drawableLeft="@drawable/ic_action_password_outline"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_action_password_outline"
        android:ems="10"
        android:hint="@string/newPassword"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/etPasswordNewConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etPasswordNewConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_action_password_outline"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_action_password_outline"
        android:ems="10"
        android:hint="@string/ConfirmPassword"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnChangePassOk"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="onRequestReset"
        android:text="@string/change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnChangePassCancel"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordNewConfirm" />

    <Button
        android:id="@+id/btnChangePassCancel"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="onCancel"
        android:text="@android:string/cancel"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnChangePassOk"
        app:layout_constraintEnd_toStartOf="@+id/btnChangePassOk"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/changePassProgress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnChangePassOk" />

    <EditText
        android:id="@+id/etUsernameInvisible"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>